# Language-helper

./: .gitignore  README.md  pyproject.toml
app/: __main__.py
app/core/: llm.py  prompts.py  rag.py
app/gui/: hotkey_gui.py
app/ui/: app.py
scripts/: build_index.py  wkt_to_entries.py
